fixed slider overflow

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .slides-container {
     position: relative;
-    width: 100vw;
+    width: 100%;
     margin: auto;
     padding-top: 64px;
 }
